[metadata]
name = burren-api
summary = Burren - Creative Media Catalog
author = Erno Kuvaja
author-email = ods+burren@opendigitalstudio.net
home-page = https://www.github.com/opendigitalstudio/burren-api
python-requires = >=3.6
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    burren

[entry_points]
asgi_scripts =
    burren-asgi-api = burren.root:app

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
